env-from-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-from-pod
spec:
  containers:
  - image: luksa/fortune
