pod-with-private-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-pod
spec:
  imagePullSecrets:
  - name: my-docker-hub-secret
  containers:
  - image: intoday87/private
    name: main
