fortune-https-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-https-service
spec:
  type: LoadBalancer 
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: fortune-https
