fortune-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
spec:
  type: LoadBalancer 
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: fortune
